# my-maas

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.aim/: memory.jsonl
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-comprehensive-tests.txt  task-1-summary.md  task-1-validation-tests.txt  task-4-all-tests-summary.txt  task-4-documentdb-index-tests.txt  task-4-ltm-config-test.txt  task-4-summary.txt  task-4-test-count.txt
.sisyphus/notepads/diskann-vector-index/: learnings.md
.sisyphus/plans/: diskann-vector-index.md
ai_docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DECISIONS.md  DEVELOPMENT.md  OVERVIEW.md  PHASE9_DOCUMENTDB_DESIGN.md
http/: health.http  http-client.env.json  ltm-batch.http  ltm.http  stm.http
otel/: otel-collector-config.yaml
src/maas/: config.py  dependencies.py  main.py
src/maas/llm/: embeddings.py  gateway.py
src/maas/ltm/: config.py  models.py  router.py  service.py
src/maas/observability/: middleware.py  tracing.py
src/maas/stm/: models.py  router.py  store.py  strategies.py
src/maas/vector_stores/: __init__.py  documentdb.py
tests/: conftest.py
tests/integration/: conftest.py  test_health.py  test_ltm.py  test_stm.py
tests/unit/: test_documentdb.py  test_health.py  test_ltm_batch.py  test_ltm_models.py  test_ltm_router.py  test_ltm_service.py  test_ltm_ttl.py  test_stm_router.py  test_stm_store.py  test_stm_strategies.py  test_stm_ttl.py
